styling fix for link tooltip overflow

--- a/frontend/src/styles/Editor.css
+++ b/frontend/src/styles/Editor.css
@@ -1,3 +1,7 @@
+.ql-editor {
+  overflow-y: inherit !important;
+}
+
 .ql-editor.ql-blank::before {
   color: inherit;
 }
